--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rick-and-morty3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://guidofabiancabrera.github.io/rickandmortyapi",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -14,6 +15,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
